--- a/MobileApp/app/src/main/AndroidManifest.xml
+++ b/MobileApp/app/src/main/AndroidManifest.xml
@@ -32,6 +32,10 @@
         <activity
             android:name=".CameraActivity"
             android:exported="false" />
+
+        <activity
+            android:name=".CameraMLActivity"
+            android:exported="false" />
         <activity
             android:name=".SelectOptionActivity"
             android:exported="false" />
