--- a/MobileApp/app/src/main/AndroidManifest.xml
+++ b/MobileApp/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
 
         <activity
             android:name=".CameraMLActivity"
+            android:keepScreenOn="true"
             android:exported="false" />
         <activity
             android:name=".SelectOptionActivity"
