--- a/WebServer/requirements.txt
+++ b/WebServer/requirements.txt
@@ -3,9 +3,18 @@ python-engineio
 python-socketio
 Flask
 Werkzeug
-opencv_python
+opencv-python==4.5.4.60
 numpy
 tensorflow
 cvlib
 sqlalchemy
 flask_sqlalchemy  
+torch 
+torchvision 
+torchaudio 
+easyocr==1.6.2
+Pillow==9.5.0
+audiosegment
+pytesseract
+
+
