--- a/MainServer/requirements.txt
+++ b/MainServer/requirements.txt
@@ -6,7 +6,8 @@ Werkzeug
 opencv-python==4.5.4.60
 numpy
 sqlalchemy
-flask_sqlalchemy  
+flask_sqlalchemy
+flask-cors  
 Pillow==9.5.0
-
-
+Flask-Session
+flask-jwt-extended
