--- a/WebClient/app/package.json
+++ b/WebClient/app/package.json
@@ -12,10 +12,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "alertifyjs": "^1.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-qr-code": "^2.0.12",
     "react-scripts": "5.0.1",
+    "react-speech-recognition": "^3.10.0",
     "socket.io-client": "^4.7.4",
     "styled-components": "^6.1.8",
     "uuid": "^9.0.1",
